test/ill-formed/0082_pointer_in_incomplete_struct_ret.c
struct s;
struct s g ();
struct s f ()
{
  return g ();
}
struct s { int *p; };
